chore: update dependencies and scripts

--- a/package.json
+++ b/package.json
@@ -19,17 +19,17 @@
     "test": "vitest",
     "test:run": "vitest run --coverage",
     "typecheck": "nx run-many --target=typecheck --exclude=.",
-    "workspace:clean": "cd $0 && rimraf lib",
-    "workspace:tsup:build": "cd $0 && tsup src/index.ts --dts",
-    "workspace:tsup:build:dev": "cd $0 && tsup src/index.ts --sourcemap --dts",
-    "workspace:tsup:buildOnly": "cd $0 && tsup src/index.ts",
-    "workspace:tsup:typecheck": "cd $0 && tsc src/index.ts --noEmit",
-    "workspace:tsup:watch": "cd $0 && tsup src/index.ts --sourcemap --dts --watch",
-    "workspace:vite:build": "cd $0 && vite build",
-    "workspace:vite:build:dev": "cd $0 && vite build --mode development",
-    "workspace:vite:buildOnly": "cd $0 && vite build",
-    "workspace:vite:typecheck": "cd $0 && vue-tsc --noEmit",
-    "workspace:vite:watch": "cd $0 && vite build --mode development --watch"
+    "ws:clean": "cd $0 && rimraf lib",
+    "ws:tsup:build": "cd $0 && tsup src/index.ts --dts",
+    "ws:tsup:build:dev": "cd $0 && tsup src/index.ts --sourcemap --dts",
+    "ws:tsup:buildOnly": "cd $0 && tsup src/index.ts",
+    "ws:tsup:typecheck": "cd $0 && tsc src/index.ts --noEmit",
+    "ws:tsup:watch": "cd $0 && tsup src/index.ts --sourcemap --dts --watch",
+    "ws:vite:build": "cd $0 && vite build",
+    "ws:vite:build:dev": "cd $0 && vite build --mode development",
+    "ws:vite:buildOnly": "cd $0 && vite build",
+    "ws:vite:typecheck": "cd $0 && vue-tsc --noEmit",
+    "ws:vite:watch": "cd $0 && vite build --mode development --watch"
   },
   "lint-staged": {
     "*.{ts,vue}": "eslint --fix",
@@ -38,11 +38,11 @@
   "prettier": "@myparcel/prettier-config",
   "devDependencies": {
     "@monodeploy/plugin-github": "^0.6.2",
-    "@myparcel-eslint/eslint-config-esnext": "^1.0.0-alpha.2",
-    "@myparcel-eslint/eslint-config-node": "^1.0.0-alpha.2",
-    "@myparcel-eslint/eslint-config-prettier": "^1.0.0-alpha.2",
-    "@myparcel-eslint/eslint-config-prettier-typescript": "^1.0.0-alpha.1",
-    "@myparcel-eslint/eslint-config-prettier-typescript-vue": "^1.0.0-alpha.1",
+    "@myparcel-eslint/eslint-config-esnext": "^1.2.0",
+    "@myparcel-eslint/eslint-config-node": "^1.2.0",
+    "@myparcel-eslint/eslint-config-prettier": "^1.2.0",
+    "@myparcel-eslint/eslint-config-prettier-typescript": "^1.2.0",
+    "@myparcel-eslint/eslint-config-prettier-typescript-vue": "^1.2.0",
     "@tsconfig/recommended": "^1.0.1",
     "@vitest/coverage-c8": "^0.25.1",
     "@vue/test-utils": "^2.2.3",
