--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -20,6 +20,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          persist-credentials: false
 
       - uses: myparcelnl/actions/yarn2-install@v2
 
