--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -20,9 +20,9 @@
   "dependencies": {
     "@myparcel/sdk": "^2.8.1",
     "@myparcel/vue-form-builder": "workspace:*",
+    "@tanstack/vue-query": "^4.17.0",
     "@vueuse/core": "^9.5.0",
     "tailwindcss": "^3.2.4",
-    "vue-query": "^1.26.0",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
