--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -20,15 +20,20 @@ runs:
 
     - uses: myparcelnl/actions/yarn2-install@v2
 
+    - name: 'Cache Nx'
+      uses: actions/cache@v3
+      with:
+        path: node_modules/.cache/nx
+        key: ${{ runner.os }}-cache-nx-${{ hashFiles('**/yarn.lock') }}-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}-cache-nx-${{ hashFiles('**/yarn.lock') }}-
+          ${{ runner.os }}-cache-nx-
+
     - name: 'Reset NX cache'
       if: inputs.reset-nx-cache
       shell: bash
       run: |
         yarn nx reset
-
-    - uses: myparcelnl/actions/cache-nx@v2
-      with:
-        lockfile: '**/yarn.lock'
 
     - name: 'Build packages'
       shell: bash
