--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@myparcel-eslint/eslint-config-prettier-typescript": "^1.2.0",
     "@myparcel-eslint/eslint-config-prettier-typescript-vue": "^1.2.0",
     "@tsconfig/recommended": "^1.0.1",
+    "@types/node": "^18.11.10",
     "@vitest/coverage-c8": "^0.25.3",
     "@vue/test-utils": "^2.2.4",
     "@vue/tsconfig": "^0.1.3",
