build: improve build flow

--- a/libs/tsconfig.build.json
+++ b/libs/tsconfig.build.json
@@ -1,20 +1,3 @@
 {
-  "extends": "../tsconfig.base.json",
-  "references": [
-    {
-      "path": "./build/tsconfig.json"
-    },
-    {
-      "path": "./core/tsconfig.json"
-    },
-    {
-      "path": "./hook-manager/tsconfig.json"
-    },
-    {
-      "path": "./plugin/tsconfig.json"
-    },
-    {
-      "path": "./utils/tsconfig.json"
-    }
-  ]
+  "extends": "../tsconfig.base.json"
 }
