--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -4,9 +4,6 @@
   "private": true,
   "license": "MIT",
   "type": "module",
-  "files": [
-    "lib"
-  ],
   "scripts": {
     "build": "vite build",
     "clean": "rimraf dist",
@@ -24,12 +21,15 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vitejs/plugin-vue-jsx": "^3.0.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
+    "rollup-plugin-visualizer": "^5.9.0",
     "sass": "^1.57.1",
     "typescript": "^4.9.4",
     "vite": "^4.0.4",
+    "vite-plugin-externals": "^0.5.1",
     "vue": "^3.2.45",
-    "vue-tsc": "^1.0.20"
+    "vue-tsc": "^1.0.22"
   }
 }
