--- a/apps/vue-form-builder/package.json
+++ b/apps/vue-form-builder/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "build": "run ws:tsup:build \"$(pwd)\"",
     "build:dev": "run ws:tsup:build:dev \"$(pwd)\"",
-    "clean": "rimraf dist",
+    "clean": "run ws:clean \"$(pwd)\"",
     "serve": "run ws:tsup:serve \"$(pwd)\"",
     "typecheck": "run ws:tsup:typecheck \"$(pwd)\"",
     "watch": "run ws:tsup:watch \"$(pwd)\""
@@ -35,7 +35,7 @@
     "tsup": "^6.5.0",
     "typescript": "^4.9.4",
     "vue": "^3.2.45",
-    "vue-tsc": "^1.0.20"
+    "vue-tsc": "^1.0.22"
   },
   "publishConfig": {
     "access": "public"
