--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "apps/**"
   ],
   "scripts": {
-    "build": "nx run-many --target=build",
+    "build": "nx build",
+    "build:demo": "nx build demo",
     "build:dev": "nx build:dev",
     "clean": "nx run-many --target=clean --exclude=.",
     "prepare": "is-ci || husky install",
@@ -20,10 +21,10 @@
     "test:run": "vitest run",
     "typecheck": "nx run-many --target=typecheck --exclude=.",
     "ws:clean": "cd $0 && rimraf lib",
-    "ws:tsup:build": "cd $0 && tsup src/index.ts --dts",
-    "ws:tsup:build:dev": "cd $0 && tsup src/index.ts --sourcemap --dts",
+    "ws:tsup:build": "cd $0 && tsup-node src/index.ts --dts",
+    "ws:tsup:build:dev": "cd $0 && tsup-node src/index.ts --sourcemap --dts",
     "ws:tsup:typecheck": "cd $0 && tsc src/index.ts --noEmit",
-    "ws:tsup:watch": "cd $0 && tsup src/index.ts --sourcemap --dts --watch",
+    "ws:tsup:watch": "cd $0 && tsup-node src/index.ts --sourcemap --dts --watch",
     "ws:vite:build": "cd $0 && vite build",
     "ws:vite:build:dev": "cd $0 && vite build --mode development",
     "ws:vite:typecheck": "cd $0 && vue-tsc --noEmit --declarationMap false -p tsconfig.build.json",
@@ -61,6 +62,7 @@
     "rimraf": "^3.0.2",
     "tsup": "^6.5.0",
     "typescript": "^4.9.4",
+    "vite-plugin-externals": "^0.5.1",
     "vitest": "^0.26.3",
     "vue": "^3.2.45"
   },
