--- a/libs/core/package.json
+++ b/libs/core/package.json
@@ -12,8 +12,10 @@
   "scripts": {
     "build": "run ws:vite:build \"$(pwd)\"",
     "build:dev": "run ws:vite:build:dev \"$(pwd)\"",
-    "clean": "rimraf dist",
+    "clean": "run ws:clean \"$(pwd)\"",
     "serve": "run ws:vite:serve \"$(pwd)\"",
+    "test": "run ws:test \"$(pwd)\"",
+    "test:run": "run ws:test:run \"$(pwd)\"",
     "typecheck": "run ws:vite:typecheck \"$(pwd)\"",
     "watch": "run ws:vite:watch \"$(pwd)\""
   },
@@ -25,9 +27,13 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vitest/coverage-c8": "^0.26.3",
+    "@vue/test-utils": "^2.2.7",
+    "happy-dom": "^8.1.2",
     "typescript": "^4.9.4",
     "vite": "^4.0.4",
     "vite-plugin-dts": "^1.7.1",
+    "vitest": "^0.26.3",
     "vue": "^3.2.45",
     "vue-tsc": "^1.0.22"
   },
