--- a/libs/plugin/package.json
+++ b/libs/plugin/package.json
@@ -22,7 +22,9 @@
   },
   "devDependencies": {
     "@myparcel-vfb/build-tsup": "workspace:*",
-    "typescript": "^4.9.4"
+    "@vitest/coverage-c8": "^0.26.3",
+    "tsup": "^6.5.0",
+    "vitest": "^0.26.3"
   },
   "publishConfig": {
     "access": "public"
