--- a/libs/utils/package.json
+++ b/libs/utils/package.json
@@ -20,8 +20,7 @@
   },
   "devDependencies": {
     "@myparcel-vfb/build-tsup": "workspace:*",
-    "typescript": "^4.9.4",
-    "vue": "^3.2.45"
+    "tsup": "^6.5.0"
   },
   "publishConfig": {
     "access": "public"
