--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "serve": "yarn build:dev && npx concurrently yarn:serve:demo yarn:serve:watch",
     "serve:demo": "nx serve demo",
     "serve:watch": "nx run-many --target=watch --exclude=.",
-    "test": "vitest",
-    "test:run": "vitest run",
+    "test": "nx run-many --target=test --parallel --exclude=. --output-style=stream",
+    "test:run": "nx run-many --target=test:run --exclude=.",
     "typecheck": "nx run-many --target=typecheck --exclude=.",
     "ws:clean": "cd $0 && rimraf lib",
+    "ws:test": "cd $0 && vitest",
+    "ws:test:run": "cd $0 && vitest run",
     "ws:tsup:build": "cd $0 && tsup-node src/index.ts --dts",
     "ws:tsup:build:dev": "cd $0 && tsup-node src/index.ts --sourcemap --dts",
     "ws:tsup:typecheck": "cd $0 && tsc src/index.ts --noEmit",
@@ -45,26 +47,17 @@
     "@myparcel-eslint/eslint-config-prettier-typescript-vue": "^1.2.0",
     "@tsconfig/recommended": "^1.0.1",
     "@types/node": "^18.11.18",
-    "@vitest/coverage-c8": "^0.26.3",
-    "@vue/test-utils": "^2.2.7",
     "@vue/tsconfig": "^0.1.3",
     "conventional-changelog-conventionalcommits": "^5.0.0",
     "eslint": "^8.31.0",
     "eslint-plugin-sort-exports": "^0.8.0",
-    "happy-dom": "^8.1.2",
     "husky": "^8.0.3",
     "is-ci": "^3.0.1",
-    "jsdom": "^20.0.3",
     "lint-staged": "^13.1.0",
     "monodeploy": "^3.6.0",
     "nx": "^15.4.4",
     "prettier": "^2.8.1",
-    "rimraf": "^3.0.2",
-    "tsup": "^6.5.0",
-    "typescript": "^4.9.4",
-    "vite-plugin-externals": "^0.5.1",
-    "vitest": "^0.26.3",
-    "vue": "^3.2.45"
+    "rimraf": "^3.0.2"
   },
   "packageManager": "yarn@3.2.4"
 }
