--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -7,5 +7,15 @@ on:
 
 jobs:
   test:
-    uses: ./.github/workflows/--test.yml
-    secrets: inherit
+    name: 'Run affected unit tests 🧪'
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: ./.github/actions/setup
+        with:
+          app-id: ${{ secrets.MYPARCEL_APP_ID }}
+          private-key: ${{ secrets.MYPARCEL_APP_PRIVATE_KEY }}
+
+      - name: 'Run tests'
+        run: nx affected --target=test:run --exclude=.
