--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -7,19 +7,21 @@ on:
       - beta
 
   workflow_dispatch:
-    inputs:
-      reset-nx-cache:
-        description: 'Reset Nx cache'
-        required: false
-        type: boolean
-        default: false
 
 jobs:
   test:
-    uses: ./.github/workflows/--test.yml
-    secrets: inherit
-    with:
-      reset-nx-cache: ${{ github.event.inputs.reset-nx-cache && true || false }}
+    name: 'Run unit tests 🧪'
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: ./.github/actions/setup
+        with:
+          app-id: ${{ secrets.MYPARCEL_APP_ID }}
+          private-key: ${{ secrets.MYPARCEL_APP_PRIVATE_KEY }}
+
+      - name: 'Run tests'
+        run: yarn test:run --output-style static
 
   release:
     name: 'Publish new release 🚀'
@@ -30,13 +32,18 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          fetch-depth: 0
-          token: ${{ secrets.GH_REPO_TOKEN }}
+          persist-credentials: false
 
       - uses: ./.github/actions/setup
+        id: setup
         with:
-          reset-nx-cache: ${{ github.event.inputs.reset-nx-cache }}
-          token: ${{ secrets.GH_REPO_TOKEN }}
+          app-id: ${{ secrets.MYPARCEL_APP_ID }}
+          private-key: ${{ secrets.MYPARCEL_APP_PRIVATE_KEY }}
+
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+          token: ${{ steps.setup.outputs.token }}
 
       - name: 'Run monodeploy'
         run: |
@@ -44,5 +51,5 @@ jobs:
             --config-file monodeploy.config.cjs \
             --log-level 0
         env:
-          GH_TOKEN: ${{ secrets.GH_REPO_TOKEN }}
+          GH_TOKEN: ${{ steps.setup.outputs.token }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
