build: switch to nx cloud cache

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -30,13 +30,19 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          fetch-depth: 0
-          token: ${{ secrets.GH_REPO_TOKEN }}
+          persist-credentials: false
 
       - uses: ./.github/actions/setup
+        id: setup
         with:
+          app-id: ${{ secrets.MYPARCEL_APP_ID }}
+          private-key: ${{ secrets.MYPARCEL_APP_PRIVATE_KEY }}
           reset-nx-cache: ${{ github.event.inputs.reset-nx-cache }}
-          token: ${{ secrets.GH_REPO_TOKEN }}
+
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+          token: ${{ steps.setup.outputs.token }}
 
       - name: 'Run monodeploy'
         run: |
@@ -44,5 +50,5 @@ jobs:
             --config-file monodeploy.config.cjs \
             --log-level 0
         env:
-          GH_TOKEN: ${{ secrets.GH_REPO_TOKEN }}
+          GH_TOKEN: ${{ steps.setup.outputs.token }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
