--- a/nx.json
+++ b/nx.json
@@ -1,6 +1,9 @@
 {
   "$schema": "./node_modules/nx/schemas/nx-schema.json",
-  "defaultBase": "main",
+  "defaultBase": "alpha",
+  "affected": {
+    "defaultBase": "alpha"
+  },
   "defaultProject": "@myparcel/vue-form-builder",
   "npmScope": "myparcel-vfb",
   "targetDefaults": {
