--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
     "build": "nx build",
     "build:demo": "nx build demo",
     "build:dev": "nx build:dev",
-    "clean": "nx run-many --target=clean --exclude=.",
+    "clean": "nx run-many --target=clean",
     "prepare": "is-ci || husky install",
     "serve": "yarn build:dev && npx concurrently yarn:serve:demo yarn:serve:watch",
     "serve:demo": "nx serve demo",
-    "serve:watch": "nx run-many --target=watch --exclude=.",
-    "test": "nx run-many --target=test --parallel --exclude=. --output-style=stream",
-    "test:run": "nx run-many --target=test:run --exclude=.",
-    "typecheck": "nx run-many --target=typecheck --exclude=.",
+    "serve:watch": "nx run-many --target=watch",
+    "test": "nx run-many --target=test --parallel --output-style=stream",
+    "test:run": "nx run-many --target=test:run",
+    "typecheck": "nx run-many --target=typecheck",
     "ws:clean": "cd $0 && rimraf lib",
     "ws:test": "cd $0 && vitest",
-    "ws:test:run": "cd $0 && vitest run",
+    "ws:test:run": "cd $0 && vitest run --coverage",
     "ws:tsup:build": "cd $0 && tsup-node src/index.ts --dts",
     "ws:tsup:build:dev": "cd $0 && tsup-node src/index.ts --sourcemap --dts",
     "ws:tsup:typecheck": "cd $0 && tsc src/index.ts --noEmit",
@@ -55,6 +55,7 @@
     "conventional-changelog-conventionalcommits": "^5.0.0",
     "eslint": "^8.32.0",
     "eslint-plugin-sort-exports": "^0.8.0",
+    "eslint-plugin-vue": "^9.9.0",
     "husky": "^8.0.3",
     "is-ci": "^3.0.1",
     "lint-staged": "^13.1.0",
