--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -5,12 +5,24 @@ on:
     branches:
       - main
 
+concurrency:
+  group: pull-request-${{ github.head_ref }}
+  cancel-in-progress: true
+
 jobs:
   test:
     name: 'Run affected unit tests 🧪'
     runs-on: ubuntu-22.04
     steps:
+      - uses: myparcelnl/actions/setup-git-credentials@v3
+        id: credentials
+        with:
+          app-id: ${{ secrets.MYPARCEL_APP_ID }}
+          private-key: ${{ secrets.MYPARCEL_APP_PRIVATE_KEY }}
+
       - uses: actions/checkout@v3
+        with:
+          token: ${{ steps.credentials.outputs.token }}
 
       - uses: ./.github/actions/setup
         with:
@@ -18,4 +30,8 @@ jobs:
           private-key: ${{ secrets.MYPARCEL_APP_PRIVATE_KEY }}
 
       - name: 'Run tests'
-        run: nx affected --target=test:run --exclude=.
+        run: |
+          yarn nx affected \
+            --target=test:run \
+            --parallel \
+            --output-style=static
