chore(deps): update dependencies

--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "scripts": {
     "build": "nx build --runner=cloud",
     "build:demo": "nx build demo --runner=cloud",
-    "build:dev": "yarn build:dev:default --runner=cloud",
+    "build:dev": "run build:dev:default --runner=cloud",
     "build:dev:default": "nx build:dev",
     "clean": "nx run-many --target=clean",
     "prepare": "is-ci || husky install",
-    "serve": "yarn build:dev:default && npx concurrently yarn:serve:demo yarn:serve:watch",
+    "serve": "run build:dev:default && npx concurrently yarn:serve:demo yarn:serve:watch",
     "serve:demo": "nx serve demo",
-    "serve:watch": "nx run-many --target=watch",
+    "serve:watch": "run build:dev:default --output-style=stream && nx watch --all -d -- nx run \\$NX_PROJECT_NAME:build:dev --output-style=stream",
     "test": "nx run-many --target=test --parallel --output-style=stream",
     "test:run": "nx run-many --target=test:run",
     "typecheck": "nx run-many --target=typecheck",
