--- a/libs/plugin/package.json
+++ b/libs/plugin/package.json
@@ -22,9 +22,10 @@
   },
   "devDependencies": {
     "@myparcel-vfb/build-tsup": "workspace:*",
-    "@vitest/coverage-c8": "^0.28.3",
+    "@vitest/coverage-c8": "^0.28.4",
+    "@vueuse/core": "^9.12.0",
     "tsup": "^6.5.0",
-    "vitest": "^0.28.3"
+    "vitest": "^0.28.4"
   },
   "publishConfig": {
     "access": "public"
