feat: add src to module files

--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "apps/**"
   ],
   "scripts": {
-    "build": "nx build --runner=cloud",
-    "build:demo": "nx build demo --runner=cloud",
-    "build:dev": "run build:dev:default --runner=cloud",
-    "build:dev:default": "nx build:dev",
+    "build": "nx build --runner=cloud --output-style=stream",
+    "build:demo": "nx build demo --runner=cloud --output-style=stream",
+    "build:dev": "run build:dev:default --runner=cloud --output-style=stream",
+    "build:dev:default": "nx build:dev --output-style=stream",
     "clean": "nx run-many --target=clean",
     "prepare": "is-ci || husky install",
     "serve": "run build:dev:default && npx concurrently yarn:serve:demo yarn:serve:watch",
@@ -25,7 +25,7 @@
     "ws:test": "cd $0 && vitest",
     "ws:test:run": "cd $0 && vitest run --coverage",
     "ws:tsup:build": "cd $0 && tsup-node src/index.ts --dts",
-    "ws:tsup:build:dev": "cd $0 && tsup-node src/index.ts --sourcemap --dts",
+    "ws:tsup:build:dev": "cd $0 && NODE_ENV=development tsup-node src/index.ts --sourcemap --dts",
     "ws:tsup:typecheck": "cd $0 && tsc src/index.ts --noEmit",
     "ws:tsup:watch": "cd $0 && tsup-node src/index.ts --sourcemap --dts --watch",
     "ws:vite:build": "cd $0 && vite build",
@@ -51,7 +51,7 @@
     "@myparcel-eslint/eslint-config-prettier-typescript-vue": "^1.2.0",
     "@nrwl/workspace": "^15.6.3",
     "@tsconfig/recommended": "^1.0.2",
-    "@types/node": "^18.11.18",
+    "@types/node": "^18.11.19",
     "@vue/tsconfig": "^0.1.3",
     "conventional-changelog-conventionalcommits": "^5.0.0",
     "eslint": "^8.33.0",
