--- a/apps/vue-form-builder/package.json
+++ b/apps/vue-form-builder/package.json
@@ -13,7 +13,8 @@
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "files": [
-    "lib"
+    "lib",
+    "src"
   ],
   "scripts": {
     "build": "run ws:tsup:build \"$(pwd)\"",
@@ -28,7 +29,7 @@
     "@myparcel-vfb/hook-manager": "workspace:^1.0.0-alpha.14",
     "@myparcel-vfb/plugin": "workspace:^1.0.0-alpha.10",
     "@myparcel-vfb/utils": "workspace:^1.0.0-alpha.13",
-    "@myparcel/ts-utils": "^1.4.0"
+    "@myparcel/ts-utils": "^1.5.1"
   },
   "devDependencies": {
     "@myparcel-vfb/build-tsup": "workspace:*",
