--- a/libs/core/package.json
+++ b/libs/core/package.json
@@ -7,7 +7,8 @@
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "files": [
-    "lib"
+    "lib",
+    "src"
   ],
   "scripts": {
     "build": "run ws:vite:build \"$(pwd)\"",
@@ -23,13 +24,13 @@
     "@myparcel-vfb/build-vite": "workspace:^1.0.0-alpha.13",
     "@myparcel-vfb/hook-manager": "workspace:^1.0.0-alpha.14",
     "@myparcel-vfb/utils": "workspace:^1.0.0-alpha.13",
-    "@myparcel/ts-utils": "^1.4.0"
+    "@myparcel/ts-utils": "^1.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitest/coverage-c8": "^0.28.4",
     "@vue/test-utils": "^2.2.10",
-    "happy-dom": "^8.2.3",
+    "happy-dom": "^8.2.6",
     "typescript": "^4.9.5",
     "vite": "^4.1.1",
     "vite-plugin-dts": "^1.7.2",
