--- a/libs/utils/package.json
+++ b/libs/utils/package.json
@@ -6,7 +6,8 @@
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "files": [
-    "lib"
+    "lib",
+    "src"
   ],
   "scripts": {
     "build": "run ws:tsup:build \"$(pwd)\"",
@@ -16,7 +17,7 @@
     "watch": "run ws:tsup:watch \"$(pwd)\""
   },
   "dependencies": {
-    "@myparcel/ts-utils": "^1.4.0"
+    "@myparcel/ts-utils": "^1.5.1"
   },
   "devDependencies": {
     "@myparcel-vfb/build-tsup": "workspace:*",
