--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -5,9 +5,12 @@ description: 'Sets up environment by setting up credentials, installing dependen
 runs:
   using: composite
   steps:
-    - uses: myparcelnl/actions/yarn2-install@v3
+    - uses: myparcelnl/actions/yarn-install@v3
 
     - name: 'Build packages'
       shell: bash
       run: |
-        yarn nx run-many --target build --output-style stream
+        yarn nx run-many \
+          --runner=cloud \
+          --target=build \
+          --output-style=stream
