--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -7,7 +7,7 @@
     "lib": ["ESNext", "DOM", "DOM.Iterable"],
     "preserveValueImports": false,
     "target": "ESNext",
-    "types": ["vite/client"]
+    "types": ["vite/client", "node"]
   },
   "include": ["./**/*.ts", "./**/*.tsx", "./**/*.vue"],
   "exclude": [
