--- a/libs/core/package.json
+++ b/libs/core/package.json
@@ -24,19 +24,19 @@
     "@myparcel-vfb/build-vite": "workspace:^1.0.0-alpha.15",
     "@myparcel-vfb/hook-manager": "workspace:^1.0.0-alpha.15",
     "@myparcel-vfb/utils": "workspace:^1.0.0-alpha.15",
-    "@myparcel/ts-utils": "^1.5.1"
+    "@myparcel/ts-utils": "^1.6.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
-    "@vitest/coverage-c8": "^0.28.4",
+    "@vitest/coverage-c8": "^0.28.5",
     "@vue/test-utils": "^2.2.10",
-    "happy-dom": "^8.2.6",
+    "happy-dom": "^8.4.2",
     "typescript": "^4.9.5",
     "vite": "^4.1.1",
-    "vite-plugin-dts": "^1.7.2",
-    "vitest": "^0.28.4",
+    "vite-plugin-dts": "1.7.2",
+    "vitest": "^0.28.5",
     "vue": "^3.2.47",
-    "vue-tsc": "^1.0.24"
+    "vue-tsc": "^1.1.2"
   },
   "publishConfig": {
     "access": "public"
