--- a/libs/plugin/package.json
+++ b/libs/plugin/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0-alpha.12",
   "license": "MIT",
   "type": "module",
+  "exports": {
+    ".": "./lib/index.js",
+    "./src": "./src/index.ts"
+  },
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "files": [
