--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "serve:demo": "nx serve demo",
     "serve:watch": "run build:dev:default --output-style=stream && nx watch --all -d -- nx run \\$NX_PROJECT_NAME:build:dev --output-style=stream",
     "test": "nx run-many --target=test --parallel --output-style=stream",
-    "test:run": "nx run-many --target=test:run",
+    "test:run": "nx run-many --target=test:run --output-style=stream",
     "typecheck": "nx run-many --target=typecheck",
     "ws:clean": "cd $0 && rimraf lib",
     "ws:test": "cd $0 && vitest",
@@ -56,7 +56,6 @@
     "conventional-changelog-conventionalcommits": "^5.0.0",
     "eslint": "^8.34.0",
     "eslint-plugin-sort-exports": "^0.8.0",
-    "eslint-plugin-vue": "^9.9.0",
     "husky": "^8.0.3",
     "is-ci": "^3.0.1",
     "lint-staged": "^13.1.2",
