--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -9,6 +9,7 @@
     "target": "ESNext",
     "types": ["vite/client", "node"]
   },
+  "include": [],
   "exclude": [
     "libs/**/dist",
     "libs/**/lib",
