--- a/libs/core/package.json
+++ b/libs/core/package.json
@@ -25,9 +25,9 @@
     "watch": "run ws:vite:watch \"$(pwd)\""
   },
   "dependencies": {
-    "@myparcel-vfb/build-vite": "workspace:^1.0.0-alpha.15",
-    "@myparcel-vfb/hook-manager": "workspace:^1.0.0-alpha.15",
-    "@myparcel-vfb/utils": "workspace:^1.0.0-alpha.15",
+    "@myparcel-vfb/build-vite": "workspace:*",
+    "@myparcel-vfb/hook-manager": "workspace:*",
+    "@myparcel-vfb/utils": "workspace:*",
     "@myparcel/ts-utils": "^1.6.0"
   },
   "devDependencies": {
