--- a/libs/build-vite/package.json
+++ b/libs/build-vite/package.json
@@ -12,8 +12,7 @@
     "rollup-plugin-visualizer": "^5.9.0",
     "vite": "^4.1.4",
     "vite-plugin-custom-tsconfig": "^1.0.4",
-    "vite-plugin-dts": "1.7.3",
-    "vue-tsc": "^1.1.5"
+    "vite-plugin-dts": "1.7.3"
   },
   "devDependencies": {
     "@myparcel/ts-utils": "^1.6.0"
