--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "monodeploy": "^3.7.0",
     "nx": "^15.7.2",
     "prettier": "^2.8.4",
-    "rimraf": "^4.1.2"
+    "rimraf": "^4.1.2",
+    "typescript": "^4.9.5"
   },
   "packageManager": "yarn@3.4.1"
 }
