--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@tsconfig/recommended": "^1.0.2",
     "@types/node": "^18.14.0",
     "@vue/tsconfig": "^0.1.3",
+    "bundlewatch": "^0.3.3",
     "conventional-changelog-conventionalcommits": "^5.0.0",
     "eslint": "^8.34.0",
     "eslint-plugin-sort-exports": "^0.8.0",
@@ -67,6 +68,32 @@
     "prettier": "^2.8.4",
     "rimraf": "^4.1.2",
     "typescript": "^4.9.5"
+  },
+  "bundlewatch": {
+    "ci": {
+      "trackBranches": [
+        "main",
+        "alpha",
+        "beta"
+      ]
+    },
+    "files": [
+      {
+        "path": "./apps/vue-form-builder/lib/**/*.js"
+      },
+      {
+        "path": "./libs/core/lib/**/*.js"
+      },
+      {
+        "path": "./libs/hook-manager/lib/**/*.js"
+      },
+      {
+        "path": "./libs/plugin/lib/**/*.js"
+      },
+      {
+        "path": "./libs/utils/lib/**/*.js"
+      }
+    ]
   },
   "packageManager": "yarn@3.4.1"
 }
